--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </nav>
         <div class="header-content">
             <h1>This is Shah Javed The <span class="txt-type" data-wait="3000" data-words='["Full-Stack Dev", "Designer", "Web3 Developer"]'></span></h1>
-            <p class="lead">I specialize in React, Node JS and UI/UX design </p>
+            <p class="lead">I'm currently learning front-end Web Designing </p>
             <a href="work.html" class="btn-light">View My Work</a>
         </div>
     </div>
